tests/integration/deprecations/refs_replaced_with_relations/10_raise_error_if_refs_is_string_in_grammar/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output | filecheck %s --dump-input=fail

CHECK: error: REFS grammar field can only be of Reference type. Furthermore, the REFS field is deprecated in favor of the new RELATIONS field. See the section "Custom grammars" in the user guide.
